# asciimath-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  utils.rs
src/elements/: accent.rs  group.rs  literal.rs  mod.rs  special.rs
src/format/: mathml.rs  mod.rs
src/parsing/: mod.rs  tokenizer.rs  tree_parser.rs
src/tests/: mathml.rs  mod.rs  parsing.rs  tokenization.rs
src/tokenizer/: mod.rs
src/tokens/: mappings.rs  mod.rs
src/tokens/constants/: accents.rs  arrows.rs  font_commands.rs  functions.rs  greek.rs  grouping.rs  logical.rs  misc.rs  mod.rs  operations.rs  relations.rs
