[package]
name = "asciimath-rs"
description = "AsciiMath parser"
repository = "https://github.com/trivernis/asciimath-rs"
version = "0.4.3"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["asciimath", "parser", "mathml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charred = "0.3.0"
maplit = "1.0.2"
lazy_static = "1.4.0"
htmlescape = "0.3.1"